--- a/css/styles.css
+++ b/css/styles.css
@@ -117,19 +117,19 @@ img {
   padding: 2rem 0 4rem;
 }
 
-.section__title {
+.section_title {
   font-size: var(--h1-font-size);
   color: var(--title-color);
 }
 
-.section__subtitle {
+.section_subtitle {
   display: block;
   font-size: var(--small-font-size);
   margin-bottom: var(--mb-3);
 }
 
-.section__title, 
-.section__subtitle {
+.section_title, 
+.section_subtitle {
   text-align: center;
 }
 
@@ -139,12 +139,10 @@ img {
   margin-left: var(--mb-1-5);
   margin-right: var(--mb-1-5);
 }
-
 .grid {
   display: grid;
   gap: 1.5rem;
 }
-
 .header {
   width: 100%;
   position: fixed;
@@ -155,52 +153,46 @@ img {
 }
 
 /*==================== NAV ====================*/
-.nav{
-max-width: 968%;
-height: var(--header-height);
-display: flex;
-justify-content: space-between;
-align-items: center;
+.nav {
+  max-width: 968%;
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .nav_logo,
-.nav_toggle{
- color: var(--title-color);
- font-weight: var(--font-medium);
+.nav_toggle {
+  color: var(--title-color);
+  font-weight: var(--font-medium);
 }
-
-.nav_logo:hover{
+.nav_logo:hover {
   color: var(--first-color);
 }
-
-.nav_toggle{
+.nav_toggle {
   font-size: 1.1rem;
   cursor: pointer;
 }
-
-.nav_toggle:hover{
+.nav_toggle:hover {
   color: var(--first-color);
 }
-
 @media screen and (max-width: 768px) {
   .nav_menu {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: var(--body-color);
-    padding: 2rem 1.5rem 4rem;
-    box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
-    border-radius: 1.5rem 1.5rem  0 0;
-    transition: 3sec;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: var(--body-color);
+      padding: 2rem 1.5rem 4rem;
+      box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
+      border-radius: 1.5rem 1.5rem 0 0;
+      transition: 3sec;
   }
-  
 }
-.nav_list{
-  grid-template-columns: repeat(3 1fr);
+.nav_list {
+  grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
 }
-.nav_link{
+.nav_link {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -208,11 +200,10 @@ align-items: center;
   color: var(--title-color);
   font-weight: var(--font-medium);
 }
-.nav_link:hover{
+.nav_link:hover {
   color: var(--first-color);
 }
-
-.nav_icon{
+.nav_icon {
   font-size: 1.2rem;
 }
 /* show menu */
@@ -225,15 +216,246 @@ align-items: center;
 
 
 /*==================== HOME ====================*/
-
-
+                 .home_container {
+                  gap: 1rem;
+              }
+              .home_content {
+                  grid-template-columns: .5fr 3fr;
+                  padding-top: 3.5rem;
+                  align-items: center;
+              }
+              .home_social {
+                  display: grid;
+                  grid-template-columns: max-content;
+                  row-gap: 1rem;
+              }
+              .home_social-icon {
+                  font-size: 1.25rem;
+                  color: var(--first-color);
+              }
+              .home_social-icon:hover {
+                  color: var(--first-color-alt);
+              }
+              .home_blob {
+                  width: 200px;
+                  fill: var(--first-color);
+              }
+              .home_blob-img {
+                  width: 170px;
+              }
+              .home_data {
+                  grid-column: 1/3;
+              }
+              .home_title {
+                  font-size: var(--big-font-size);
+              }
+              .home_subtitle {
+                  font-size: var(--h3-font-size);
+                  color: var(--text-color);
+                  font-weight: var(--font-medium);
+                  margin-bottom: var(--mb-0-75);
+              }
+              .home_description {
+                  margin-bottom: var(--mb-2);
+              }
+              .home_scroll {
+                  display: none;
+              }
+              .home_scroll-button {
+                  color: var(--first-color);
+                  transition: .3s;
+              }
+              .home_scroll-button:hover {
+                  transform: translateY(.25rem)
+              }
+              .home_scroll-mouse {
+                  font-size: 2rem;
+              }
+              .home_scroll-name {
+                  font-size: var(--small-font-size);
+                  color: var(--title-color);
+                  font-weight: var(--font-medium);
+                  margin-right: var(--mb-0-25);
+              }
+              .home_scroll-arrow {
+                  font-size: 1.25rem;
+              }
 /*==================== BUTTONS ====================*/
+.button {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 1rem;
+  border-radius: .5rem;
+  font-weight: var(--font-medium);
+}
+.button:hover {
+  background-color: var(--first-color-alt);
+}
+.button_icon {
+  font-size: 1.25rem;
+  margin-left: var(--mb-0-5);
+  transition: 3s;
+}
+.button--flex {
+  display: inline-flex;
+  align-items: center;
+}
 
+/*==================== ABOUT ====================*/
+.about_img {
+  /* width: 200px; */
+  border-radius: 2.5rem;
+  justify-content: center;
+  align-items: center;
+}
+.about_description {
+  text-align: center;
+  margin-bottom: var(--mb-2-5);
+}
+.about_info {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: var(--mb-2-5);
+}
+.about_info-title {
+  font-size: var(--h2-font-size);
+  font: var(--font-semi-bold);
+  color: var(--title-color);
+}
+.about_info-name {
+  font-size: var(--smaller-font-size);
+}
+.about_info-title,
+.about_info-name {
+  display: block;
+  align-items: center;
+}
+.about_buttons {
+  display: flex;
+  justify-content: center;
+}
 
 /*==================== ABOUT ====================*/
 
 
 /*==================== SKILLS ====================*/
+.skills_container{
+  row-gap: 0;
+}
+
+.skills_header {
+  display: flex;
+  align-items: center;
+  margin-bottom: var(--mb-2-5);
+  cursor: pointer;
+}
+
+.skills__icon,
+.skills_arrow {
+  font-size: 2rem;
+  color: var(--first-color)
+}
+
+
+.skills__icon {
+    color: var(--mb-0-75)
+}
+
+.skills_title {
+  font-size: var(--h3-font-size);
+}
+
+.skills_subtitle{
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+
+.skills_arrow {
+  margin-left: auto;
+  transition: 4s;
+}
+
+.skills_list {
+  row-gap: 1.5rem;
+  padding-left: 2.7rem;
+}
+
+.skills_titles{
+  display: flex;
+  justify-content: space-between;
+  gap: var(--mb-0-5);
+}
+
+.skills_name {
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
+}
+
+.skills_bar
+.skills_percentage {
+  height: 5px;
+  border-radius: .25rem;
+}
+
+.skills_bar{
+  background-color: var(--first-color-lighter);
+}
+
+.skills_percentage {
+  display: block;
+  background-color: var(--first-color);
+}
+
+.skills_html {
+  width: 80%;
+}
+
+.skills_css {
+  width: 80%;
+}
+
+.skills_js {
+  width: 50%;
+}
+
+.skills_react {
+  width: 70%;
+}
+
+.skills_node {
+  width: 70%;
+}
+.skills_python {
+  width: 20%;
+}
+.skills_firebase {
+  width: 50%;
+}
+
+.skills_figma {
+  width: 70%;
+}
+
+.skills_sketch {
+  width: 80%;
+}
+
+.skills_photoshop {
+  width: 50%;
+}
+.skills_close  .skills_list-grid {
+  height: 0;
+  overflow: hidden;
+}
+
+.skills_open  .skills_list-grid {
+  height: max-content;
+  margin-bottom: var(--mb-2-5);
+}
+.skills_open .skills_arrow {
+  transform: rotate(-180deg);
+}
 
 
 /*==================== QUALIFICATION ====================*/
